--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
     <div class="hero-content">
         <!-- Profile Section with Floating Animation -->
         <div class="profile">
-            <img src="photos/me.JPG" alt="Profile photo of Vaibhav Upare" class="profile-photo" loading="lazy">
+            <img src="me.JPG" alt="Profile photo of Vaibhav Upare" class="profile-photo" loading="lazy">
             <h2 class="name">Vaibhav Upare</h2>
         </div>
 
