--- a/index.html
+++ b/index.html
@@ -262,7 +262,8 @@
         <p>Practical and Hands-On Experience Notes with Guidance related to DevOps, Cloud Solutions, and more.</p>
 
         <!-- Get Started Button -->
-        <button class="get-started-btn" onclick="window.location.href='first.html'">Get Started</button>
+      <button class="get-started-btn" onclick="window.location.href='https://vaibhav0342.github.io/DevOps-Cloud-Solutions-1/'">Get Started</button>
+
 
     </div>
 </header>
